--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+
+  max-width: 600px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cards {
+  margin: 20px 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+@media (min-width: 720px) {
+  .App {
+    flex-direction: row;
+  }
+
+  .cards {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .card {
+    margin: 0 30px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card {
+  padding: 20px;
+
+  overflow-x: hidden;
+  width: 100px;
+
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
+
+.card:not(:last-child) {
+  margin-right: 10px;
+}
+
